# omniex-core

./: README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: lint.yml
