[project]
name = "omniex_core"
version = "0.27.2"

description = "Async REST/WS clients for crypto exchanges"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "LoveBloodAndDiamonds", email = "ayazshakirzyanov27@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "eth-account>=0.13.7",
    "loguru>=0.7.3",
    "msgpack>=1.1.1",
    "orjson>=3.11.3",
    "protobuf>=6.32.1",
    "websockets>=15.0.1",
]

[project.urls]
Github = "https://github.com/LoveBloodAndDiamonds/omniex-core"
Author = "https://t.me/LoveBloodAndDiamonds"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pre-commit>=4.3.0",
    "twine>=6.2.0",
]
